Responsive, vars, conditionals, functions, loops

--- a/CSS/ResponsiveDesign/CSS/style.css
+++ b/CSS/ResponsiveDesign/CSS/style.css
@@ -51,3 +51,11 @@ header {
         background-color: darkgreen;
     }
 }
+
+
+@media print {
+    h3, blockquote {
+        margin-top: 10px;
+        font-style: italic;
+    }
+}
